--- a/src/app/screens/broadcast-sms/broadcast-sms.component.css
+++ b/src/app/screens/broadcast-sms/broadcast-sms.component.css
@@ -324,3 +324,416 @@
     font-weight: 500;
     line-height: normal;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    border-radius: .6rem;
+    box-shadow: 0 0 10px #EEEEEE80;
+    background-color: #FCFCFC;
+    gap: 1.5rem;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    gap: 1.5rem;
+    align-items: center;
+}
+
+.kanban {
+    font-size: 1rem;
+    font-weight: 500;
+    color: #737791;
+}
+
+.header button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .75rem;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    border-radius: 8px;
+    background: linear-gradient(270deg, #2EBC96 0%, #1A9096 100%);
+    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.25);
+    padding: .7rem;
+    cursor: pointer;
+}
+
+.header button img {
+    width: 25px;
+}
+
+.header button span {
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.g-bg-head {
+    background: #F9FAFA;
+    padding: .8rem 1.2rem;
+    color: #737791;
+    font-family: Poppins;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.table-wrapper {
+    overflow-x: auto;
+}
+
+.table {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.t-item {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr 3fr 2fr 2fr;
+    gap: 1rem;
+    border-radius: 5px;
+    padding: 1rem;
+    border-bottom: 1px solid #EEE;
+    background: #FFF;
+    white-space: nowrap;
+    align-items: center;
+}
+
+.t-item.template {
+    grid-template-columns: 2fr 2fr 2fr 2fr 2fr;
+}
+
+.ti-item.message {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.ti-item {
+    text-align: center;
+    color: #7B7B7B;
+    text-align: center;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.ti-item:last-child {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+}
+
+.ti-item button {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.t-item-h .ti-item {
+    color: #737791;
+    text-align: center;
+    font-family: "Plus Jakarta Sans";
+    font-size: 1.1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.no-history {
+    border: 1px solid #EEE;
+    display: flex;
+    width: 1397px;
+    padding: 19px;
+    justify-content: center;
+    align-items: center;
+    gap: 71px;
+    color: #7B7B7B;
+    font-size: 1.1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.add-top {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    justify-content: space-between;
+}
+
+.add-top h1 {
+    color: #030303;
+    font-family: Poppins;
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%;
+    /* 39.2px */
+}
+
+.btns {
+    display: flex;
+    gap: 1rem;
+}
+
+.btns button {
+    border-radius: 8px;
+    background: linear-gradient(0deg, #2EBC96 0%, #1A9096 100%);
+    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
+    padding: .75rem;
+    border: none;
+    outline: none;
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    justify-content: center;
+}
+
+.btns button svg {
+    width: 2rem;
+    aspect-ratio: 1;
+}
+
+.setup {
+    display: flex;
+    gap: 1.5rem;
+}
+
+.left {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex: 1;
+    min-width: 300px;
+    max-width: 450px;
+    max-height: 70vh;
+    overflow-y: auto;
+}
+
+.left-main-head {
+    padding: 1rem;
+    margin-left: -1.5rem;
+    text-align: center;
+    color: #030303;
+    font-family: Poppins;
+    font-size: 1.3rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%;
+    /* 33.6px */
+    background: #EEE;
+}
+
+.fields {
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.inp-con {
+    display: flex;
+    flex-direction: column;
+    gap: .7rem;
+}
+
+.inp-con label {
+    color: #030303;
+    font-family: Poppins;
+    font-size: 1.1rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%;
+    /* 28px */
+}
+
+.inp-con label span {
+    color: #888;
+    font-weight: 400;
+    margin-left: 5px;
+}
+
+.inp-con input,
+.inp-con select,
+.inp-con textarea {
+    border-radius: 9px;
+    border: 1px solid #E5E5ED;
+    padding: 1rem;
+    outline: none;
+}
+
+.inp-con textarea {
+    height: 120px;
+    resize: none;
+}
+
+.mobile-con {
+    min-width: 300px;
+    flex: 1.3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mobile {
+    width: 60%;
+    max-width: 300px;
+}
+
+.badge {
+    padding: .5rem .7rem;
+    border-radius: 10px;
+    background: #24CC63;
+    color: #FFF;
+    font-size: 1rem;
+    width: fit-content;
+    margin: 0 auto;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.m-header {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    background: linear-gradient(77deg, #2EBC96 40.89%, #1A9096 101.89%);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    gap: 1.5rem;
+    border-radius: 1rem;
+}
+
+.mh-d {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.mh-d h1 {
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%;
+}
+
+.mh-d>button {
+    border: none;
+    outline: none;
+    border-radius: 7.963px;
+    background: #FFF;
+    box-shadow: 0px 0px 7.963px 0px rgba(0, 0, 0, 0.10);
+    padding: .3rem;
+    cursor: pointer;
+}
+
+.mhd-btns {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.mhd-btns button {
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+    outline: none;
+    display: flex;
+    align-items: center;
+    gap: .75rem;
+    padding: .6rem .9rem;
+    cursor: pointer;
+}
+
+.mhd-btns span {
+    color: #737791;
+    font-family: Poppins;
+    font-size: 1.1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.mhd-btns button:nth-child(2) {
+    border-radius: 8px;
+    background: linear-gradient(270deg, #2EBC96 0%, #1A9096 100%);
+    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.25);
+}
+
+.mhd-btns button:nth-child(2) span {
+    color: white;
+}
+
+.mhd-btns button img {
+    width: 32px;
+    height: 32px;
+    flex-shrink: 0;
+}
+
+.m-body {
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+    padding: 2rem 3rem;
+}
+
+.mb-left {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.mb-right {
+    flex: 1;
+}
+
+.mb-right img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.mbl-inp {
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
+}
+
+.mbl-inp label {
+    color: #737791;
+    font-size: 1.2rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.mbl-inp input {
+    border-radius: .5rem;
+    border: 1.276px solid #2EBC96;
+    background: rgba(217, 217, 217, 0.10);
+    outline: none;
+    padding: .75rem;
+}
