--- a/src/app/screens/broadcast-whatsapp/broadcast-whatsapp.component.html
+++ b/src/app/screens/broadcast-whatsapp/broadcast-whatsapp.component.html
@@ -78,7 +78,22 @@
                     <div class="inp-con">
                         <label>Header <span>Optional</span></label>
                         <div class="icons">
-
+                            <label class="icon" for="file">
+                                <img src="../../../assets/broadcast-icons/file.svg" alt="">
+                                <input type="file" name="file" id="file" hidden accept=".pdf, .txt, .docx">
+                            </label>
+                            <label class="icon" for="video">
+                                <img src="../../../assets/broadcast-icons/video.svg" alt="">
+                                <input type="file" name="video" id="video" hidden accept=".mp4">
+                            </label>
+                            <label class="icon" for="attachment">
+                                <img src="../../../assets/broadcast-icons/attachment.svg" alt="">
+                                <input type="file" name="attachment" id="attachment" hidden accept="">
+                            </label>
+                            <label class="icon" for="img">
+                                <img src="../../../assets/broadcast-icons/img.svg" alt="">
+                                <input type="file" name="img" id="img" hidden accept=".jpg, .png">
+                            </label>
                         </div>
                     </div>
                     <div class="inp-con message">
