--- a/src/app/screens/bot-settings/bot-settings.component.css
+++ b/src/app/screens/bot-settings/bot-settings.component.css
@@ -543,3 +543,24 @@
 .q-l-t-header span:nth-child(2) {
     flex: 4;
 }
+
+.qry-list-item {
+    margin: 5px;
+    width: 100%;
+    background-color: #dedede;
+    display: flex;
+    padding: 5px 0px;
+    /* border-radius: 50px; */
+    flex-wrap: nowrap;
+}
+
+.query-code-list {
+  /* display: flex; */
+    padding: 1rem;
+    max-height: 300px;
+    height: 300px;
+    overflow-y: auto;
+    background-color: #fff;
+    flex-wrap: wrap;
+    border-radius: 5px;
+}
