--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
-    background-color: #f1f1f1;
+    /* background-color: #f1f1f1; */
+    background-color: #fff;
     min-height: 100vh;
 }
 
