--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,18 +1,45 @@
 .navbar {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
     gap: 1rem;
     background-color: white;
-    padding: 1rem 2rem;
+    padding: 1.5rem 2rem;
     position: sticky;
     top: 0;
 }
 
-.navbar h1 {
-    font-size: 1.5rem;
-    font-weight: 600;
+.left {
+    display: flex;
+    flex-direction: column;
+}
+
+.left h1 {
+    font-size: 2rem;
+    font-weight: 700;
     color: #151D48;
+    font-family: Raleway;
+}
+
+.kanban {
+    color: var(--bold-text, #737791);
+    font-family: Nunito;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.54px;
+}
+
+.middle {
+    border-radius: 30px;
+    background: #FFF;
+    box-shadow: 14px 17px 40px 4px rgba(112, 144, 176, 0.08);
+    padding: 1rem;
+    flex: 1;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .search {
@@ -23,7 +50,8 @@
     border-radius: .6rem;
     background-color: #F9FAFB;
     width: 100%;
-    max-width: 450px;
+    border-radius: 49px;
+    background: rgba(46, 188, 150, 0.10);
 }
 
 .search img {
@@ -44,96 +72,76 @@
 .right {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    border-radius: 30px;
+    background: #FFF;
+    box-shadow: 14px 17px 40px 4px rgba(112, 144, 176, 0.08);
+    padding: 1rem 1.5rem;
+    gap: 1.5rem;
     position: relative;
+    flex-direction: row-reverse;
+    transition: 100ms;
 }
 
-.user {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    cursor: pointer;
+.right>* {
+    transition: 100ms;
+}
+
+.right:hover {
+    flex-direction: column;
+    border-radius: 30px 30px 0 0;
+}
+
+.dp h5 {
+    color: var(--dark-color, #181818);
+    font-family: Nunito;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    width: 0px;
+    overflow: hidden;
+    white-space: nowrap;
+    margin-left: -1.5rem;
 }
 
 .dp {
-    height: 35px;
-    width: 35px;
-    border-radius: .5rem;
-    background: linear-gradient(to right, #2EBC96, #1A9096);
+    cursor: pointer;
     display: flex;
-    justify-content: center;
     align-items: center;
-    color: white;
-    font-size: 1rem;
-    font-weight: 700;
+    gap: .5rem;
 }
 
-.user_details {
+.right:hover .svg {
+    display: none;
+}
+
+.right:hover .dp>h5 {
+    width: fit-content;
+    margin-left: 0rem;
+}
+
+.menu {
+    display: none;
+}
+
+.right:hover .menu {
     display: flex;
     flex-direction: column;
-}
-
-.user_details p {
-    font-size: .92rem;
-    font-weight: 500;
-    line-height: 150%;
-}
-
-.user_details span {
-    font-size: .8rem;
-    font-weight: 400;
-    color: #737791;
-}
-
-.notification {
-    width: 35px;
-    height: 35px;
-    flex-shrink: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 8px;
-    background: rgba(46, 188, 150, 0.20);
-    cursor: pointer;
-}
-
-.notification img {
-    width: 60%;
-    height: 60%;
-}
-
-.rotate {
-    rotate: 180deg;
-    translate: 0 30px;
-}
-
-.logout {
+    width: 100%;
     position: absolute;
-    top: 120%;
-    right: 0;
-    border-radius: 9px;
-    border: 1px solid #E5E5ED;
+    top: 100%;
+    left: 0;
+    padding: 0 1.5rem 1.5rem;
+    border-radius: 0 0 30px 30px;
+    z-index: 99999;
     background: #FFF;
-    padding: 1rem;
+    box-shadow: 14px 17px 40px 4px rgba(112, 144, 176, 0.08);
 }
 
-.logout button {
-    padding: 1rem 4rem;
-    border: none;
-    outline: none;
-    border-radius: 8px;
-    background: linear-gradient(0deg, #2EBC96 0%, #1A9096 100%);
-    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
-    font-size: 1rem;
-    color: white;
+.menu-item {
     display: flex;
     align-items: center;
-    gap: .6rem;
-    font-weight: 500;
+    gap: 1rem;
+    padding: 1rem;
     cursor: pointer;
-}
-
-.logout button svg {
-    width: 20px;
-    height: 20px;
 }
