--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,13 +1,15 @@
 .sidebar-wrapper {
     position: sticky;
     top: 0;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    background-color: #fff;
+    z-index: 100;
 }
 
 .sidebar {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    background-color: #fff;
     padding: 2rem;
     height: 100vh;
     position: relative;
