--- a/src/app/screens/bot-settings/bot-settings.component.css
+++ b/src/app/screens/bot-settings/bot-settings.component.css
@@ -545,22 +545,23 @@
 }
 
 .qry-list-item {
-    margin: 5px;
     width: 100%;
     background-color: #dedede;
-    display: flex;
-    padding: 5px 0px;
-    /* border-radius: 50px; */
-    flex-wrap: nowrap;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr .2fr;
+    gap: 1rem;
 }
 
 .query-code-list {
-  /* display: flex; */
+    /* display: flex; */
     padding: 1rem;
     max-height: 300px;
     height: 300px;
     overflow-y: auto;
     background-color: #fff;
-    flex-wrap: wrap;
     border-radius: 5px;
+    gap: 1rem;
+    display: flex;
+    flex-direction: column;
 }
