--- a/src/app/screens/bot-settings/bot-settings.component.css
+++ b/src/app/screens/bot-settings/bot-settings.component.css
@@ -549,7 +549,7 @@
     background-color: #dedede;
     padding: 1rem;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr .2fr;
+    grid-template-columns: 1fr 3fr .2fr;
     gap: 1rem;
 }
 
