--- a/src/app/screens/bookings/bookings.component.html
+++ b/src/app/screens/bookings/bookings.component.html
@@ -94,7 +94,7 @@
                                         <span>Total Amount</span>
                                         <div class="badge">Completed</div>
                                     </div>
-                                    <h3>{{currentBookingDetails.payment.total}}</h3>
+                                    <h3>£{{currentBookingDetails.payment.total}}</h3>
                                 </div>
                                 <div class="bd_dets">
                                     <div>
