--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar-wrapper">
     <nav class="sidebar" [class.toggled]="isToggled">
         <div class="logo">
-            <img src="../../../assets/img/logo.png" alt="">
+            <img src="../../../assets/logo.png" alt="">
             <h1>Taxi Messages</h1>
         </div>
         <ul class="menu">
