--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="right">
         <div class="top" style="margin-top: 0;">
-            <h1>Booking Messages For WhatsApp</h1>
+            <h1><span style="text-transform: capitalize;">{{currentList}}</span> Messages For WhatsApp</h1>
             <!-- <button>
             <svg xmlns="http://www.w3.org/2000/svg" width="21" height="14" viewBox="0 0 21 14" fill="none">
                 <path d="M2 1.79065H18.67M5.12556 7.00002H15.5443M9.29302 12.2094H11.3768" stroke="white"
@@ -61,7 +61,7 @@
 
         <div class="top">
             <h1>
-                Booking Messages For SMS
+                <span style="text-transform: capitalize;">{{currentList}}</span> Messages For SMS
             </h1>
         </div>
         <div class="instance_grid">
