--- a/src/app/components/reports/reports.component.html
+++ b/src/app/components/reports/reports.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="top">
+    <!-- <div class="top">
         <div class="left">
             <h4>Reports</h4>
             <span>Summary</span>
@@ -26,8 +26,82 @@
             </svg>
             <span>Export</span>
         </button>
+    </div> -->
+    <div class="top">
+        <div class="duration_picker">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                <g clip-path="url(#clip0_1342_7266)">
+                    <path
+                        d="M19.242 3.66929H18.2799V2.70719C18.2799 2.17803 17.8469 1.74509 17.3178 1.74509C16.7886 1.74509 16.3557 2.17803 16.3557 2.70719V3.66929H6.73469V2.70719C6.73469 2.17803 6.30175 1.74509 5.77259 1.74509C5.24344 1.74509 4.81049 2.17803 4.81049 2.70719V3.66929H3.84839C2.79008 3.66929 1.92419 4.53518 1.92419 5.59349V20.9871C1.92419 22.0454 2.79008 22.9113 3.84839 22.9113H19.242C20.3003 22.9113 21.1662 22.0454 21.1662 20.9871V5.59349C21.1662 4.53518 20.3003 3.66929 19.242 3.66929ZM18.2799 20.9871H4.81049C4.28134 20.9871 3.84839 20.5541 3.84839 20.025V8.47978H19.242V20.025C19.242 20.5541 18.809 20.9871 18.2799 20.9871Z"
+                        fill="#2EBC96" />
+                </g>
+                <defs>
+                    <clipPath id="clip0_1342_7266">
+                        <rect width="23.0904" height="23.0904" fill="white" transform="translate(0 0.782959)" />
+                    </clipPath>
+                </defs>
+            </svg>
+            <span>This month</span>
+        </div>
+        <div class="top-r">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                <g clip-path="url(#clip0_1342_7241)">
+                    <path
+                        d="M9.12893 12.1342H9.38549C10.3732 12.1342 11.1814 12.9424 11.1814 13.9301V22.9097C11.1814 23.8975 10.3732 24.7057 9.38549 24.7057H9.12893C8.14117 24.7057 7.33301 23.8975 7.33301 22.9097V13.9301C7.33301 12.9424 8.14117 12.1342 9.12893 12.1342ZM16.3126 6.74646C17.3004 6.74646 18.1085 7.55462 18.1085 8.54238V22.9097C18.1085 23.8975 17.3004 24.7057 16.3126 24.7057C15.3249 24.7057 14.5167 23.8975 14.5167 22.9097V8.54238C14.5167 7.55462 15.3249 6.74646 16.3126 6.74646ZM23.4963 17.0089C24.484 17.0089 25.2922 17.817 25.2922 18.8048V22.9097C25.2922 23.8975 24.484 24.7057 23.4963 24.7057C22.5085 24.7057 21.7004 23.8975 21.7004 22.9097V18.8048C21.7004 17.817 22.5085 17.0089 23.4963 17.0089Z"
+                        fill="#2EBC96" />
+                </g>
+                <defs>
+                    <clipPath id="clip0_1342_7241">
+                        <rect width="30.7872" height="30.7872" fill="white" transform="translate(0.918945 0.332428)" />
+                    </clipPath>
+                </defs>
+            </svg>
+        </div>
     </div>
-    <div class="chart_con">
-        <canvas id="lineChart"></canvas>
+    <div class="bot">
+        <div class="b-left">
+            <div class="bl-top">
+                <h1>137.5K</h1>
+                <span>messages</span>
+            </div>
+            <div class="bl-total">
+                <p>Total Sent</p>
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="27" height="24" viewBox="0 0 27 17" fill="none">
+                        <g clip-path="url(#clip0_1342_7248)">
+                            <path d="M7.76868 13.608L13.1469 8.8114L18.5251 13.608H7.76868Z" fill="#2EBC96" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_1342_7248">
+                                <rect width="25.8153" height="23.0237" fill="white"
+                                    transform="translate(0.239258 0.177521)" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                    +2.45%
+                </span>
+            </div>
+            <div class="bl-status">
+                <div class="check">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
+                        <g clip-path="url(#clip0_1342_7254)">
+                            <path
+                                d="M5.90657 9.68408L3.84874 7.62626C3.61944 7.39696 3.25491 7.39696 3.02561 7.62626C2.79631 7.85556 2.79631 8.22009 3.02561 8.44939L5.48912 10.9129C5.71842 11.1422 6.08883 11.1422 6.31813 10.9129L12.5504 4.68651C12.7797 4.45721 12.7797 4.09268 12.5504 3.86338C12.3211 3.63408 11.9566 3.63408 11.7273 3.86338L5.90657 9.68408Z"
+                                fill="white" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_1342_7254">
+                                <rect width="14.1108" height="14.1108" fill="white"
+                                    transform="translate(0.61499 0.159424)" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                </div>
+                <span>On Track</span>
+            </div>
+        </div>
+        <div class="chart_con">
+            <canvas id="lineChart"></canvas>
+        </div>
     </div>
 </div>
