--- a/src/app/screens/home/home.component.css
+++ b/src/app/screens/home/home.component.css
@@ -122,11 +122,11 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    border-radius: 8.356px;
-    background: var(--Neutral-White, #FFF);
-    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
+    border-radius: 21.292px;
+    background: #FFF;
+    box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.20);
     padding: 2rem;
-    min-width: 411px;
+    min-width: 450px;
 }
 
 .bc-top {
@@ -134,28 +134,28 @@
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .bc-top h3 {
-    color: #030303;
-    font-family: Poppins;
-    font-size: 1rem;
+    color: var(--dark-color, #181818);
+    font-family: Nunito;
+    font-size: 1.5rem;
     font-style: normal;
     font-weight: 700;
+    line-height: normal;
 }
 
 .bc-top a {
-    display: flex;
-    align-items: center;
-    gap: .2rem;
-    color: var(--Diverging-Blue, #3B82F6);
-    font-family: "Plus Jakarta Sans";
+    color: #2EBC96;
+    font-family: Nunito;
     font-size: .9rem;
     font-style: normal;
-    font-weight: 400;
-    line-height: 21.093px;
-    /* 142.857% */
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.42px;
+    display: flex;
+    align-items: center;
 }
 
 .chart {
@@ -163,7 +163,57 @@
     margin: 0 auto;
 }
 
-.bc-table {
+.labels {
+    border-radius: 15.969px;
+    background: #FFF;
+    box-shadow: 0px 19.163px 42.584px 0px rgba(112, 144, 176, 0.12);
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.label div {
+    display: flex;
+    flex-direction: column;
+}
+
+.labels label {
+    color: #A3AED0;
+    font-family: Nunito;
+    font-size: .75rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.36px;
+    position: relative;
+}
+
+.labels label::before {
+    content: "";
+    position: absolute;
+    left: -1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 10px;
+    width: 10px;
+    border-radius: 10px;
+    background-color: var(--color);
+}
+
+.labels p {
+    color: var(--dark-color, #181818);
+    text-align: right;
+    font-family: Nunito;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+/* .bc-table {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -205,18 +255,35 @@
     width: 20px;
     background-color: var(--color);
     border-radius: 15px;
-}
+} */
 
 .activity {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     max-width: calc(100% - 411px - 2rem);
+    padding: 1.25rem;
+    border-radius: 1.25rem;
+    background: #FFF;
+    box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.20);
 }
 
 .a_top {
     display: flex;
     gap: 1rem;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.a_top h1 {
+    color: var(--dark-color, #181818);
+
+    /* Heading */
+    font-family: Raleway;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 
 .a_top button {
@@ -291,11 +358,14 @@
 .filters>.left {
     display: flex;
     gap: 1rem;
+    flex: 1;
     flex-wrap: wrap;
+    margin-top: 2rem;
 }
 
 .inp_con {
-    min-width: 250px;
+    /* min-width: 250px; */
+    flex: 1;
     display: flex;
     flex-direction: column;
 }
